--- a/shopmanager/templates/admin/trades/change_list.html
+++ b/shopmanager/templates/admin/trades/change_list.html
@@ -78,7 +78,12 @@
             </li>
             <li>
               <a href="/trades/order/statistic/" class="addlink" target="_blank">
-                商品统计
+                商品 统计
+              </a>
+            </li>
+            <li>
+              <a href="/trades/order/statistic/?is_sale=1" class="addlink" target="_blank">
+                特卖商品 统计
               </a>
             </li>
             <li>
