--- a/shopmanager/shopback/trades/templates/trades/order_report_chart.html
+++ b/shopmanager/shopback/trades/templates/trades/order_report_chart.html
@@ -5,7 +5,7 @@
     <title>订单统计</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
      
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css">
     <link href="{{ STATIC_URL }}css/table.less" rel="stylesheet/less" type="text/css">
     <script src="{{ STATIC_URL }}script/less.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css" /> 
@@ -21,8 +21,10 @@
 		ul li{ 
 			list-style:none; 
 			display:inline; 
-			 
 			margin-left:20px;  
+		}
+		ul li:first-child{
+			margin-left:0px;
 		}
 		input{
 			width:100px;
@@ -41,8 +43,8 @@
     {% endif %}
 </head>
 <body>
-	<div class="container" style="width:1200px;margin-top:30px;">
-	<div style="height:80px;margin-bottom:10px;">
+	<div class="container" >
+	<div style="height:80px;margin:20px auto 10px;">
 		<form  class="form-inline" method="POST" action="/orders/ordernum/pivotchart/" >
 			<div>
 				<ul>
@@ -95,7 +97,7 @@
 			</div>
 		</form>
 	</div>
-    <div id='container1'> 交易统计图表加载中... </div>
+    <div id='container1'><div class="well"> 请输入查询条件... </div></div>
    </div>
 </body>
 
