--- a/shopmanager/shopback/trades/templates/trades/repullsuccess.html
+++ b/shopmanager/shopback/trades/templates/trades/repullsuccess.html
@@ -14,7 +14,7 @@
 			    <tr>
 			      <th>订单ID</th><th>淘宝订单编号</th><th>店铺名称</th><th>买家昵称</th><th>付款日期</th><th>下载状态</th><th>问题编号</th>
 			    </tr>
-			    <tr style="background-color:red;"><td colspan="7">下载失败的订单{{ fail_trades|length }}</td></tr>
+			    <tr style="background-color:red;"><td colspan="7">下载失败有<label>{{ fail_trades|length }}</label>单(如果订单有合单，请先将该订单取消合并后再重新下单)</td></tr>
 			    {% for trade in fail_trades %}
 			    <tr>
 			    	<td>{{ trade.id }}</td>
@@ -26,7 +26,7 @@
 			    	<td>{{ trade.reason_code }}</td>
 			    </tr>
 			    {% endfor %}
-			    <tr style="backgroumd-color:green;"><td colspan="7">下载成功的订单{{ success_trades|length }}</td></tr>
+			    <tr style="backgroumd-color:green;"><td colspan="7">下载成功有<label>{{ success_trades|length }}</label>单</td></tr>
 			    {% for trade in success_trades %}
 			    <tr>
 			    	<td>{{ trade.id }}</td>
