--- a/shopmanager/shopback/trades/templates/trades/repullsuccess.html
+++ b/shopmanager/shopback/trades/templates/trades/repullsuccess.html
@@ -26,7 +26,7 @@
 			    	<td>{{ trade.reason_code }}</td>
 			    </tr>
 			    {% endfor %}
-			    <tr style="backgroumd-color:green;"><td colspan="7">下载成功有<label>{{ success_trades|length }}</label>单</td></tr>
+			    <tr style="background-color:green;"><td colspan="7">下载成功有<label>{{ success_trades|length }}</label>单</td></tr>
 			    {% for trade in success_trades %}
 			    <tr>
 			    	<td>{{ trade.id }}</td>
