--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -57,7 +57,8 @@
 	<p id="id_msg" style="text-align:center;color:red"></p>
 	<div class="col-xs-12" style="text-align:center; margin-top:16px">
 	{% if order_exist %}
-	<p>亲，您的申请已经提交。<a href="/weixin/sampleads/{{ wx_user.pk }}/">分享您的VIP邀请码>></a></p>
+	<p>亲，您的申请已经提交。</p>
+	<p><a href="/weixin/sampleads/{{ wx_user.pk }}/">分享您的VIP邀请码页面>></a></p>
         {% else %}
 	{% if started %}
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
