--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -105,7 +105,7 @@ WeixinApi.ready(function(Api) {
 
     // 微信分享的数据
     var wxData = {
-        "appId": "", // 服务号可以填写appId
+        "appId": "wx3192657bff632654", // 服务号可以填写appId
         "imgUrl" : "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvu5WdzhDicmHmlBpuga4YW6nwKMuINKhI5Nicyp8baGAwt06DSgFFktcvolIAPHJmUDviaaQguqqPtg/0",
         "link" : "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/",
         "desc" : "超级实用的睡袋，适用年龄0-6岁，宝宝穿上就再也不怕感冒咯！",
