--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -50,7 +50,7 @@
       {% if not identical %}
       <div style="text-align:center;height:80px;padding-top:20px;">
 	<p><a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/?f={{ vipcode }}&response_type=code&scope=snsapi_base&state=135#wechat_redirect" class="btn btn-warning">点击申请领取 >></a></p>
-	<p style="color:red">F码：{{ vipcode }}</p>
+	<p style="color:red">VIP邀请码：{{ vipcode }}</p>
       </div>
       {% endif %}
       
